--- a/src/_CSS/style.css
+++ b/src/_CSS/style.css
@@ -105,7 +105,7 @@ div.btn-plus-notes {
 
 div.box-single-notes {
     width: 100%;
-    height: 500px;
+    height: 80vh;
     overflow-y: auto;
 }
 
